 * Fixed viewing bugs to automatically switch projects if you view a bug from another project (often done through a link).
 * Fixed file uploads to report an error when a blank file is uploaded.
 * Fixed database and file to no longer use TIMESTAMPS.
 * Fixed password reset to blank to work for other encryption types.
 * Fixed admin_upgrade.php to honor the $g_php global.
 * Modified many files for extensive use of CSS.
 * Modified BLOB field to LONGBLOB.
 * Modified bug action buttons to be more consistent.
 * Modified version string to be longer.
 * Modified html functions to consolidate code.
 * Modified confirm messages to consolidate localization strings.
 * Modified comments to use one # instead of ### (save space)
 * Modified alternate_colors() to have default parameters.
 * Modified all files to use <?php instead of <?
 * Modified error messages to use $MANTIS_ERROR array.
 * Modified code to update last_updated/last_modified fields for bugs, bugnotes, and news.
 * Added view by page feature.
 * Added edit new link in news update page.
 * Added file upload into database.
 * Added a link to Mantis at the bottom of the pages.
 * Added support for date_order field for version.
 * Added delete file capability.
 * Added view all projects capability.
 * Added support to move bugs from one project to another.
 * Added email check to admin_check.php3
 * Added a check to make sure the cookie_string really is unique.
 * Added a check for a duplciate user in the manage create user page.
 * Removed site_settings pages.
 * Removed unused cookie variables.
 * Removed sql_to_unix_time() function.  Unecessary with removal of TIMESTAMPS.
 * Removed menu_inc.php file and related variable.  Moved this into print_menu().
 * Removed print_mantis_version().  Moved it into print_foooter().
 * Removed some unused code.
 * Removed get_project_name() function.  Replaced with a more general get_project_field().
 * Renamed g_store_file_to to g_file_upload_method.