@@ -295,20 +295,35 @@
 
 		project_check( $p_bug_id );
 
+		#if ( 0 == $p_project_id ) {
+		#	$p_project_id = $g_project_cookie_val;
+		#}
+
 		# access_level check
 		$t_project_id = get_bug_field( "project_id", $p_bug_id );
 		$t_user_id = get_current_user_field( "id" );
 		$t_project_access_level = get_project_access_level( $t_project_id );
-		$t_access_level = get_current_user_field( "access_level" );
-		if ( -1 != $t_project_access_level ) {
-			if ( 0 ) {
-				print_header_redirect( $g_login_select_proj_page );
-			} else {
+
+		#echo $t_project_id."<br>";
+		#echo $g_project_cookie_val."<br>";
+		#echo $t_project_access_level."<br>";
+
+		if ( -1 == $t_project_access_level ) {
+			# user is not in the user lists
+			$t_access_level = get_current_user_field( "access_level" );
+			$t_access_threshold = get_project_field( $t_project_id, "access_min" );
+			#echo $t_access_level."<br>";
+			#echo $t_access_threshold."<br>";
+			#exit;
+			if ( $t_access_level >= $t_access_threshold ) {
 				return;
+			} else {
+				print_header_redirect( $g_login_select_proj_page );
 			}
 		} else {
+			# user is in the user lists
+			# being in the lists means they have access
 			return;
-			#print_header_redirect( $g_logout_page );
 		}
 	}
 	# --------------------
